--- a/crud-backend/package.json
+++ b/crud-backend/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "mongojs": "^3.1.0",
     "mongoose": "^5.7.12",
-    "nodemon": "^2.0.1"
+    "node-fetch": "^2.6.0",
+    "nodemon": "^2.0.2"
   }
 }
